	- Changes Introduced In 0.2.1
	- Changes Introduced In 0.2.0
	- Changes Introduced In 0.1.3
	- Changes Introduced In 0.1.2
	- Changes Introduced In 0.1.1
    - Changes Introduced In 0.1.0

****************************************************
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\

**Changes introduced in 0.3.17
[Fix]		Error when configuring managed cable connector type as ST

**Changes introduced in 0.3.17
[Fix]		Backup export not converting HTML code to ASCII hyphen
[Fix]		Import function not reporting line or filename in error messages

**Changes introduced in 0.3.17
[Enhance]	Increased maximum backup upload size to 10MB
[Enhance]	Decreased maximum image upload size to 1MB
[Fix]		Port description field spins after edit

**Changes introduced in 0.3.16
[Feature]	Port description
[Enhance]	Improved password hashing
[Enhance]	Added support for ST connectors
[Fix]		Hyphen encoded in search results
[Fix]		Cabinet cable paths inaccessible

**Changes introduced in 0.3.15
[Fix]		Floorplan object ports not available when making new connection
[Fix]		HTML code for hyphens not converted when viewing floorplan object details

**Changes introduced in 0.3.14
[Enhance]	Added support for point-to-multipoint connections to represent breakout cables
[Fix]		Broken template image upload
[Fix]		Objects deleted without confirmation

**Changes introduced in 0.3.13
[Fix]		Failure to import trunk data correctly on backup restore

**Changes introduced in 0.3.12
[Enhance]	When configuring template port ID, show last port ID in long abreviated list
[Enhance]	Cable path connections generated programatically instead of static images
[Enhance]	Added customer payment portal
[Fix]		Corrected nested insert size as displayed in "Available Templates" box
[Fix]		Template port ID add/remove field not refreshing when shown for different connectable partitions
[Fix]		Fresh install inserted data in a way that would cause a "duplicate cabinet order" error on backup restore
