@@ -20,15 +20,37 @@ if($_SERVER['REQUEST_METHOD'] == 'POST'){
 		$cableID = $data['cableID'];
 		$action = $data['action'];
 		
-		$editable = $action == 'finalize' ? 0 : 1;
-		
-		$qls->SQL->update('app_inventory', array('editable' => $editable), array('id' => array('=', $cableID)));
+		if($action == 'lock' or $action == 'unlock') {
+			
+			$editable = $action == 'lock' ? 0 : 1;
+			
+			$qls->SQL->update('app_inventory', array('editable' => $editable), array('id' => array('=', $cableID)));
+			
+		} else if($action == 'delete') {
+			
+			
+			
+			if(isset($qls->App->inventoryAllArray[$cableID])) {
+				$cable = $qls->App->inventoryAllArray[$cableID];
+				
+				if($cable['a_object_id'] != 0 and $cable['b_object_id'] != 0) {
+					
+					$qls->SQL->delete('app_inventory', array('id' => array('=', $cableID)));
+					
+				} else {
+					
+					$errMsg = 'Unable to delete managed cables that are connected to ports.  Clear cable connection(s) and try again.';
+					array_push($validate->returnData['error'], $errMsg);
+				}
+			}
+			
+		}
 	}
 	echo json_encode($validate->returnData);
 }
 
 function validate($data, &$validate, &$qls){
-	$actionArray = array('finalize', 'unfinalize');
+	$actionArray = array('lock', 'unlock', 'delete');
 	
 	$validate->validateID($data['cableID'], 'cable ID');
 	
