@@ -18,9 +18,9 @@
 			echo '<th>ID</th>';
 			echo '<th>Connector</th>';
 			echo '<th>Connected</th>';
-			echo '<th>Finalized</th>';
 			echo '<th>Media</th>';
 			echo '<th>Length</th>';
+			echo '<th>Action</th>';
 		echo '</tr>';
 	echo '</thead>';
 	echo '<tbody>';
@@ -30,7 +30,7 @@
 		$lengthValue = $row['length'];
 		$length = $qls->App->calculateCableLength($mediaTypeID, $lengthValue);
 		
-		echo '<tr>';
+		echo '<tr id="'.$row['id'].'">';
 			echo '<td data-connectorID="'.$row['a_code39'].'"><a class="linkScan" href="#">'.$row['a_code39'].'</a><button class="displayBarcode pull-right btn btn-sm waves-effect waves-light btn-primary"><i class="fa fa-barcode"></i></button></td>';
 			echo '<td>'.$connectorTable[$row['a_connector']]['name'].'</td>';
 			if($row['a_object_id'] == 0) {
@@ -45,13 +45,23 @@
 			} else {
 				echo '<td>'.$pillYes.'</td>';
 			}
-			if($row['editable'] == 0) {
-				echo '<td>'.$pillYes.'&nbsp&nbsp<a title="Allow cable properties to be edited." class="linkEditable" data-action="unfinalize" data-cableID="'.$row['id'].'" href="javascript:void(0);">unFinalize</a></td>';
-			} else {
-				echo '<td>'.$pillNo.'&nbsp&nbsp<a title="Remove the ability to edit cable properties." class="linkEditable" data-action="finalize" data-cableID="'.$row['id'].'" href="javascript:void(0);">Finalize</a></td>';
-			}
 			echo '<td>'.$mediaTypeTable[$row['mediaType']]['name'].'</td>';
 			echo '<td>'.$length.'</td>';
+			echo '<td>';
+			if($row['editable'] == 0) {
+				echo '<a title="Unlock cable for editing" class="linkEditable" data-action="unlock" data-cableID="'.$row['id'].'" href="javascript:void(0);">';
+				echo '<i class="fa fa-lock"></i>';
+				echo '</a>';
+			} else {
+				echo '<a title="Lock cable for editing" class="linkEditable" data-action="lock" data-cableID="'.$row['id'].'" href="javascript:void(0);">';
+				echo '<i class="fa fa-unlock"></i>';
+				echo '</a>';
+			}
+			echo '&nbsp&nbsp';
+			echo '<a title="Delete cable" class="linkEditable" data-action="delete" data-cableID="'.$row['id'].'" href="javascript:void(0);" data-toggle="modal" data-target="#modalConfirm">';
+			echo '<i class="fa fa-times"></i>';
+			echo '</a>';
+			echo '</td>';
 		echo '</tr>';
 	}
 	echo '</tbody>';
